# comms2

./: CMakeLists.txt  README.md  build.sh  test.sh
examples/cli/: CMakeLists.txt  cli.cpp
examples/demo/: CMakeLists.txt  cobs.cpp  dispatcher.cpp  serialize.cpp  serialize_buffers.cpp
include/Comms2/: Comms2.h  Comms2Config.h  Encoder.h  Error.h  Parser.h  ProtocolDispatcher.h
include/Comms2/buffer/: Buffer.h  BufferInterface.h
include/Comms2/protocols/application/: KalmanBinaryProtocol.h  LinkControlProtocol.h  Protocol.h  RawDataStreamProtocol.h
include/Comms2/protocols/datalink/: COBS.h  FTPFrame.h
src/: Comms2.cpp  Encoder.cpp  Parser.cpp  ProtocolDispatcher.cpp
src/protocols/application/: KalmanBinaryProtocol.cpp  LinkControlProtocol.cpp  RawDataStreamProtocol.cpp
src/protocols/datalink/: COBS.cpp  FTPFrame.cpp
tests/: COBS.cpp  EncoderParser.cpp  FTPFrame.cpp  testing.cmake
